--- a/npc/css/npc.css
+++ b/npc/css/npc.css
@@ -170,9 +170,9 @@ body{
 
 #personality0, #personality1, #personality2, #personality3{
     position: absolute;
-    top: 483px;
+    top: 495px;
     left: 348px;
-    font-size: 0.8em;;
+    font-size: 0.75em;;
     width: 135px;
 }
 
@@ -218,7 +218,7 @@ body{
     top: 273px;
     left: 348px;
     width: 135px;
-    font-size: 0.8em;
+    font-size: 0.75em;
 }
 
 
@@ -309,10 +309,9 @@ body{
 
 
 
-#demo{
+#language0, #language1, #language2, #language3{
     position: absolute;
-    top: 330px;
-    left: 210px;
-    font-size: 0.75em;
-    width: 110px;
+    top: 373px;
+    left: 348px;
+    font-size:0.75em;
 }
